...
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ok"
        android:id="@+id/dialog_generic_message_single_okbtn"
        android:layout_gravity="center_horizontal"
        style="@style/rsButton"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="visible"
        android:layout_marginBottom="10dp"/>
...

        <Button
            style="@style/rsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"
            android:id="@+id/dialog_generic_message_dual_okbtn"
            android:layout_weight="1"
            android:layout_marginRight="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
