<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.rockspoon.rockandui.Components.TopBar
        android:id="@id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:topbarBackEnabled="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/initialsetup_margin">

        <TextView
            android:id="@+id/textView15"
            style="@style/rsTextSuperLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/welcome_to"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/rockspoon_logo"/>

        <Button
            android:id="@+id/initialsetup_startsetupbtn"
            style="@style/rsButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/start_setup"/>

    </LinearLayout>


</LinearLayout>