<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F000"
    android:padding="10dp"
    android:id="@+id/login_keypad">

    <LinearLayout
        android:id="@+id/input_password_keypad_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_password_ball_container"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/input_key1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button"
                android:text="@string/one"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <Button
                android:id="@+id/input_key2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button"
                android:text="@string/two"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <Button
                android:id="@+id/input_key3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button"
                android:text="@string/three"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/input_key4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button"
                android:text="@string/four"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <Button
                android:id="@+id/input_key5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button"
                android:text="@string/five"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <Button
                android:id="@+id/input_key6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button"
                android:text="@string/six"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/input_key7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button"
                android:text="@string/seven"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <Button
                android:id="@+id/input_key8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button"
                android:text="@string/eight"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <Button
                android:id="@+id/input_key9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button"
                android:text="@string/nine"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/input_key0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/input_password_ball_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewPassword"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/input_ball0"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_button_shape_normal" />

        <ImageView
            android:id="@+id/input_ball1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_button_shape_normal" />

        <ImageView
            android:id="@+id/input_ball2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_button_shape_normal" />

        <ImageView
            android:id="@+id/input_ball3"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_button_shape_normal" />
    </LinearLayout>

    <Button
        android:id="@+id/input_password_forgotpass"
        style="@style/rsFlatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:padding="15dp"
        android:text="@string/button_forgot_password"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/input_password_delete"
        style="@style/rsFlatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:padding="15dp"
        android:text="@string/button_delete"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/input_password_back"
        style="@style/rsFlatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:padding="15dp"
        android:text="@string/button_back"
        android:textColor="@color/white" />

</RelativeLayout>